<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.NebuIASample.FullscreenContainer"
    tools:context=".activities.UploadActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/loading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="visible">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:indicatorColor="#3d7ee9"
                app:indicatorSize="@dimen/_40ssp"
                app:trackColor="@android:color/white"
                app:trackThickness="@dimen/_2ssp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_4ssp"
                android:text="@string/please_wait"
                android:textColor="#2B303D"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_20ssp"
                android:gravity="center"
                android:text="@string/id_upload_summary"
                android:textAlignment="center"
                android:textColor="#7d82a8"
                android:textSize="@dimen/_13ssp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/success_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/_105sdp"
                android:layout_height="@dimen/_105sdp"
                android:layout_gravity="center"
                android:src="@drawable/done_operation"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/title_summary_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:gravity="center"
                android:text="@string/upload_id_done"
                android:textColor="#2B303D"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/upload_id_done_summary"
                android:textAlignment="center"
                android:textColor="#7d82a8"
                android:textSize="@dimen/_12ssp" />


            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/continue_success"
                android:layout_width="335dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button"
                android:text="@string/continue_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/error_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="invisible">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageView
                android:layout_width="@dimen/_100sdp"
                android:layout_height="@dimen/_100sdp"
                android:layout_gravity="center"
                android:src="@drawable/error_operation"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/title_summary_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_40sdp"
                android:gravity="center"
                android:text="@string/upload_id_error"
                android:textColor="#2B303D"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/error_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:gravity="center"
                android:text="@string/upload_id_error_summary"
                android:textAlignment="center"
                android:textColor="#6A6E78"
                android:textSize="@dimen/_12ssp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/continue_error"
                android:layout_width="335dp"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_10sdp"
                android:background="@drawable/button"
                android:text="@string/continue_button"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </FrameLayout>


</LinearLayout>