<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_overlay"
    tools:context=".activities.RecordActivity">

    <com.otaliastudios.cameraview.CameraView
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_360sdp"
        android:keepScreenOn="true"
        app:cameraAutoFocusResetDelay="6"
        app:cameraEngine="camera2"
        app:cameraFacing="front"
        app:cameraMode="video"
        app:cameraPlaySounds="false"
        app:cameraPreview="glSurface"
        app:cameraRequestPermissions="true"
        app:cameraUseDeviceOrientation="true">

    </com.otaliastudios.cameraview.CameraView>


    <LinearLayout
        android:id="@+id/panel_fingerprint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginTop="@dimen/_290sdp"
        android:background="@drawable/radius_white"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/video_record_title"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/initial_instruction_record"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_11sdp" />


        <LinearLayout
            android:id="@+id/zone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:visibility="invisible">

            <TextView
                android:id="@+id/read_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/_8sdp"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

        <Button
            android:id="@+id/continue_text"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_37sdp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:text="@string/next_item"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/_10sdp" />

        <View
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_weight="1" />


        <ImageView
            android:layout_width="@dimen/_90sdp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="@dimen/_2sdp"
            android:contentDescription="@string/powered_by_nebuia"
            android:src="@drawable/nebuia_black" />

    </LinearLayout>


</RelativeLayout>